--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -24,6 +24,8 @@ RUN apt-get install -y \
         zip \
     && docker-php-ext-install zip
 
+COPY --from=composer/composer:latest-bin /composer /usr/bin/composer
+
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
 
